Version 0.5

 . Added Cookie support from Mikko Torni <mtorni@mail.freenet.hut.fi>
 . Added proper install target to main Makefile
 . Corrected multiple fields code
 . Reworked offline parser, thanks to Mikko
 . Improved test suite
 . Fixed problem with name being a prefix of another
 . Also decode HTTP strings for multiple fields



Version 0.4

 . Initial and fixed versions.
 . For details refer to debian/changelog
