@@ -15,7 +15,7 @@
 .\" along with this program; if not, write to the Free Software
 .\" Foundation, Inc.,59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
 .\"
-.TH cgi 5 "14 August 1999" "Debian GNU/Linux" "Programmer's Manual"
+.TH cgi 5 "14 August 1999" "CGI Library" "Programmer's Manual"
 .SH NAME
 cgi \- Common Gateway Interface
 
@@ -112,5 +112,7 @@ please get in touch with him.
 .SH "SEE ALSO"
 .BR cgiDebug (3),
 .BR cgiHeader (3),
+.BR cgiSetType (3),
+.BR cgiSetHeader (3),
 .BR cgiGetValue (3),
 .BR cgiGetVariables (3).
