@@ -15,9 +15,9 @@
 .\" along with this program; if not, write to the Free Software
 .\" Foundation, Inc.,59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
 .\"
-.TH cgiDebug 3 "14 August 1999" "Debian GNU/Linux" "Programmer's Manual"
+.TH cgiDebug 3 "14 August 1999" "CGI Library" "Programmer's Manual"
 .SH NAME
-cgiDebug \- Set the debug level for cgi programming
+cgiDebug \- Set the debug level for CGI programming
 .SH SYNOPSYS
 .nf
 .B #include <cgi.h>
