@@ -15,7 +15,7 @@
 .\" along with this program; if not, write to the Free Software
 .\" Foundation, Inc.,59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
 .\"
-.TH cgiRedirect 3 "14 August 1999" "Debian GNU/Linux" "Programmer's Manual"
+.TH cgiRedirect 3 "14 August 1999" "CGI Library" "Programmer's Manual"
 .SH NAME
 cgiRedirect \- Redirect the browser somewhere else
 .SH SYNOPSYS
