@@ -7,6 +7,7 @@ Version 0.5
  . Improved test suite
  . Fixed problem with name being a prefix of another
  . Also decode HTTP strings for multiple fields
+ . Added cgiSetType() and cgiSetHeader() with documentation
 
 
 
